- Fix Controller principal. - Fix Th:Layout - Fix oauth2 config for principal